--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,17 +39,21 @@
         app:layout_constraintBottom_toTopOf="@id/searchBtnGLHorizontal">
 
         <Button
+            tools:ignore="HardcodedText"
             android:id="@+id/searchBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="50dp"
-            android:minWidth="330dp"
+            android:minWidth="320dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:elevation="20dp"
-            app:backgroundtTint="@color/white"
+            android:textAllCaps="false"
+            android:text="Start your search"
+            android:textSize="15sp"
+            app:backgroundtTint="#FFF5F5F5"
             android:background="@drawable/search_bar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
