--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".10" />
+        app:layout_constraintGuide_percent=".05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/searchBtnGLVerticalRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".90" />
+        app:layout_constraintGuide_percent=".95" />
 
     <!-- Search Bar -->
 
@@ -44,22 +44,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="50dp"
-            android:minWidth="320dp"
+            android:minWidth="370dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:elevation="20dp"
             android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:fontFamily="@font/inter_regular"
             android:text="Start your search"
             android:textSize="15sp"
-            app:backgroundtTint="#FFF5F5F5"
-            android:background="@drawable/search_bar" />
+            app:backgroundTint="#FFDFDFDF"
+            android:background="@drawable/search_btn_style" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- List View -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/roomsListViewContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:paddingTop="20dp"
+        android:elevation="10dp"
+        app:layout_constraintStart_toStartOf="@+id/searchBtnGLVerticalLeft"
+        app:layout_constraintEnd_toEndOf="@+id/searchBtnGLVerticalRight"
+        app:layout_constraintTop_toBottomOf="@+id/searchBtnGLHorizontal"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view">
 
+        <ListView
+            android:id="@+id/roomsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
