--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,273 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFDFDFDF"
     tools:context=".ui.search.SearchActivity">
+
+    <!-- Guidelines -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/startHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".05"/>
+    
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/secondStartHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".13"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/endHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".95"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".95"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".05"/>
+
+    <!-- Back button to home screen and text-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/backBtnContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/startHorizontal"
+        app:layout_constraintStart_toStartOf="@+id/verticalLeft">
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_btn_style"
+            android:contentDescription="Close"
+            android:elevation="2dp"
+            android:gravity="left"
+            android:minWidth="20dp"
+            android:minHeight="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,RtlHardcoded,TouchTargetSizeCheck" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/textContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/startHorizontal"
+        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
+        app:layout_constraintEnd_toEndOf="@+id/verticalRight">
+
+        <TextView
+            android:id="@+id/textSearch"
+            tools:ignore="HardcodedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Search"
+            android:textSize="20sp"
+            android:fontFamily="@font/inter_medium"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Date and time -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/datePickerContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingVertical="7dp"
+        android:paddingHorizontal="20dp"
+        android:elevation="10dp"
+        android:background="@drawable/input_layout_background"
+        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
+        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
+        app:layout_constraintTop_toTopOf="@+id/secondStartHorizontal" >
+
+        <TextView
+            tools:ignore="HardcodedText"
+            android:id="@+id/datePreffered"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="YYYY-MM-DD"
+            android:fontFamily="@font/inter_bold"
+            android:textSize="17sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            tools:ignore="HardcodedText"
+            android:id="@+id/datePickBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Pick"
+            android:textAllCaps="false"
+            android:fontFamily="@font/inter_semibold"
+            android:letterSpacing="0.01"
+            />
+        
+    </androidx.constraintlayout.widget.ConstraintLayout>
+        
+
+    <!-- Room Type -->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/roomTypeContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="20dp"
+        android:elevation="10dp"
+        android:background="@drawable/input_layout_background"
+        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
+        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
+        app:layout_constraintTop_toBottomOf="@+id/datePickerContainer" >
+
+        <TextView
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypeText"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Room Type"
+            android:fontFamily="@font/inter_semibold"
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypePremium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/roomTypeText"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Premium"
+            android:textSize="15sp"
+            android:fontFamily="@font/inter_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textIsSelectable="true" />
+
+        <RadioButton
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypeDeluxe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/roomTypePremium"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Deluxe"
+            android:textSize="15sp"
+            android:fontFamily="@font/inter_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textIsSelectable="true" />
+
+        <RadioButton
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypeExecutive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/roomTypeDeluxe"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Executive"
+            android:textSize="15sp"
+            android:fontFamily="@font/inter_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textIsSelectable="true" />
+
+        <RadioButton
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypeRegency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/roomTypeExecutive"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Regency"
+            android:textSize="15sp"
+            android:fontFamily="@font/inter_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textIsSelectable="true" />
+
+        <RadioButton
+            tools:ignore="HardcodedText"
+            android:id="@+id/roomTypeRoyale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/roomTypeRegency"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Royale"
+            android:textSize="15sp"
+            android:fontFamily="@font/inter_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textIsSelectable="true" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    
+    
+    <!-- Search Button -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/searchBtnContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
+        app:layout_constraintBottom_toBottomOf="@id/endHorizontal">
+        
+        <Button
+            android:id="@+id/confirmSearchBtn"
+            tools:ignore="HardcodedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:fontFamily="@font/inter_medium"
+            android:letterSpacing="0.01"
+            android:text="Search"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+        
+    </androidx.constraintlayout.widget.ConstraintLayout>
+        
 
 </androidx.constraintlayout.widget.ConstraintLayout>
