--- a/app/src/main/res/layout/activity_bookings.xml
+++ b/app/src/main/res/layout/activity_bookings.xml
@@ -18,6 +18,13 @@
         app:layout_constraintGuide_percent=".05"/>
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/secondStartHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".13"/>
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,16 +47,42 @@
         app:layout_constraintStart_toStartOf="@id/verticalLeft">
 
         <TextView
+            tools:ignore="HardcodedText"
             android:id="@+id/bookingsText"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:textSize="27sp"
+            android:text="Bookings"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/inter_bold"
+            android:textColor="@color/black"
+            android:textAllCaps="false" />
 
-            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Bookings History -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bookingsListViewContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/secondStartHorizontal"
+        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
+        app:layout_constraintEnd_toEndOf="@id/verticalRight">
 
+        <ListView
+            android:id="@+id/bookingsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            android:clickable="true"/>
 
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
